# calibre-api

./: .env  .project  .pydevproject  Dockerfile  Dockerfile.txt  LICENSE  README.md  cache.py  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  security.py
calibre/: __init__.py  cache.py  database.py  main.py  models.py  requirements.txt  security.py  setup.sh
config/: calibre.conf
